--- a/aframe.cabal
+++ b/aframe.cabal
@@ -22,6 +22,7 @@ library
   -- other-extensions:    
   build-depends:       base >=4.8 && <5.0
                ,       containers
+               ,       gdiff
                ,       text
                ,       xml
         
