--- a/aframe.cabal
+++ b/aframe.cabal
@@ -21,6 +21,7 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <5.0
+               ,       aeson >= 0.11 && < 0.12
                ,       containers
                ,       gdiff
                ,       text
