--- a/aframe.cabal
+++ b/aframe.cabal
@@ -26,6 +26,8 @@ library
                ,       gdiff
                ,       text
                ,       xml
+               ,       taggy
+               ,       unordered-containers
         
   hs-source-dirs:      src
   default-language:    Haskell2010
